--- a/procedure/code/01-R-markdown.Rmd
+++ b/procedure/code/01-R-markdown.Rmd
@@ -1,6 +1,6 @@
 ---
-title: "Analysis"
-author: "HEGSRR"
+title: "Sterling 2023 Reproduction Study"
+author: "Jorre Dahl and Lucas Nerbonne"
 date: "`r Sys.Date()`"
 output: html_document
 editor_options:
@@ -11,15 +11,6 @@ knit: (function(inputFile, encoding) {
 nocite: '@*'
 bibliography: "../../software.bib"
 ---
-
-# Instructions
-
-This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents.
-For more details on using R Markdown see <https://rmarkdown.rstudio.com/lesson-1.html>.
-In the header section above, you can configure [options for this document](https://bookdown.org/yihui/rmarkdown/html-document.html), including title, author(s), and additional style and output options.
-The `nocite` and `bibliography` lines automatically add a bibliography for the software packages you have used.
-Remove the `nocite` line to suppress references you haven't cited.
-You may delete this instruction section.
 
 # Abstract
 
@@ -123,34 +114,24 @@ knitr::opts_chunk$set(
 
 ## Data and variables
 
-Describe the **data sources** and **variables** to be used.
-Data sources may include plans for observing and recording **primary data** or descriptions of **secondary data**.
-For secondary data sources with numerous variables, the analysis plan authors may focus on documenting only the variables intended for use in the study.
+This study used only two data sources; American Community Survey (ACS) demographic data and maps of neighborhood's historical morgage HOLC grades, published and maintained on
+the University of Richmond's Mapping Inequality Database. 
 
-Primary data sources for the study are to include ... .
-Secondary data sources for the study are to include ... .
+### American Community Survey (ACS)
 
-Each of the next subsections describes one data source.
-
-### Primary data source1 name
-
-- `Title`: Title of data source
-- `Abstract`: Brief description of the data source
-- `Spatial Coverage`: Specify the geographic extent of your study. This may be a place name and link to a feature in a gazetteer like GeoNames or OpenStreetMap, or a well known text (WKT) representation of a bounding box.
-- `Spatial Resolution`: Specify the spatial resolution as a scale factor, description of the level of detail of each unit of observation (including administrative level of administrative areas), and/or or distance of a raster GRID size
-- `Spatial Representation Type`: Specify the model of spatial data representation, e.g. one of `vector`, `grid`, `textTable`, `tin` (triangulated irregular network), etc. If the type is `vector`, also specify the geometry type as in the OGC Simple Feature Access standard (https://www.ogc.org/publications/standard/sfa/) , e.g. `POINT`, `LINESTRING`, `MULTIPOLYGON`, etc. 
-- `Spatial Reference System`: Specify the geographic or projected coordinate system for the study
-- `Temporal Coverage`: Specify the temporal extent of your study---i.e. the range of time represented by the data observations.
-- `Temporal Resolution`: Specify the temporal resolution of your study---i.e. the duration of time for which each observation represents or the revisit period for repeated observations
-- `Lineage`: Describe and/or cite data sources and/or methodological steps planned to create this data source.
-  - sampling scheme, including spatial sampling
-  - target sample size and method for determining sample size
-  - stopping criteria for data collection and sampling (e.g. sample size, time elapsed)
-  - de-identification / anonymization
-  - experimental manipulation
-- `Distribution`: Describe who will make the data available and how?
-- `Constraints`: Legal constraints for *access* or *use* to protect *privacy* or *intellectual property rights*
-- `Data Quality`: State any planned quality assessment
+- `Title`: American Community Survey (ACS)
+- `Abstract`: The ACS is a nationwide survey that collects and produces information on social, 
+economic, housing, and demographic characteristics about our nation's population every year
+- `Spatial Coverage`: United States of America
+- `Spatial Resolution`: ACS data is aggregated by Census Block. 
+- `Spatial Representation Type`: `vector`, `MULTIPOLYGON`
+- `Spatial Reference System`: `WGS84:4326`
+- `Temporal Coverage`: 1935–1940 (approximate dates of HOLC map creation)
+- `Temporal Resolution`: Single mapping effort. 
+- `Lineage`: Downloaded and used as-is.
+- `Distribution`: Data is publically avalible from the Mapping Inequality website (https://dsl.richmond.edu/panorama/redlining/data)[https://dsl.richmond.edu/panorama/redlining/data]
+- `Constraints`: Publically avalible data.
+- `Data Quality`: N/A
 - `Variables`: For each variable, enter the following information. If you have two or more variables per data source, you may want to present this information in table form (shown below)
   - `Label`: variable name as used in the data or code
   - `Alias`: intuitive natural language name
@@ -168,9 +149,33 @@ Each of the next subsections describes one data source.
 
 ### Primary data source2 name
 
-... same form as above...  
-Metadata documents in the markdown `.md` format can be included directly with the `includeMarkdown()` function.
-This requires the `markdown` package.
+ `Title`: HOLC grades from the Mapping Inequality Database (MID)
+- `Abstract`: HOLC grades are historical neighborhood delineations created by the Home Owners’ Loan Corporation in the 1930s to assess mortgage lending risk. These maps were used to guide investment and disinvestment in urban areas
+ and are a foundational dataset for understanding redlining and its long-term impacts.
+- `Spatial Coverage`: Select major U.S. cities
+- `Spatial Resolution`: Neighborhood-scale boundaries (city block to district level, variable by city)
+- `Spatial Representation Type`: `vector`, `MULTIPOLYGON`
+- `Spatial Reference System`: `NAD83`
+- `Temporal Coverage`: ACS data from 2016-2020. 
+- `Temporal Resolution`: Data is collected annually. 
+- `Lineage`: Downloaded and used as-is.
+- `Distribution`: Data is publically avalible from the US Census (https://www.census.gov/programs-surveys/acs/data.html)[https://www.census.gov/programs-surveys/acs/data.html]
+- `Constraints`: Publically avalible data.
+- `Data Quality`: N/A
+- `Variables`: For each variable, enter the following information. If you have two or more variables per data source, you may want to present this information in table form (shown below)
+  - `Label`: variable name as used in the data or code
+  - `Alias`: intuitive natural language name
+  - `Definition`: Short description or definition of the variable. Include measurement units in description.
+  - `Type`: data type, e.g. character string, integer, real
+  - `Accuracy`: e.g. uncertainty of measurements
+  - `Domain`: Expected range of Maximum and Minimum of numerical data, or codes or categories of nominal data, or reference to a standard codebook
+  - `Missing Data Value(s)`: Values used to represent missing data and frequency of missing data observations
+  - `Missing Data Frequency`: Frequency of missing data observations: not yet known for data to be collected
+
+| Label | Alias | Definition | Type | Accuracy | Domain | Missing Data Value(s) | Missing Data Frequency |
+| :--: | :--: | :--: | :--: | :--: | :--: | :--: | :--: |
+| variable1 | ... | ... | ... | ... | ... | ... | ... |
+| variable2 | ... | ... | ... | ... | ... | ... | ... |
 
 ### Secondary data source1 name
 
@@ -178,7 +183,7 @@ This requires the `markdown` package.
 - `Abstract`: Brief description of the data source
 - `Spatial Coverage`: Specify the geographic extent of your study. This may be a place name and link to a feature in a gazetteer like GeoNames or OpenStreetMap, or a well known text (WKT) representation of a bounding box.
 - `Spatial Resolution`: Specify the spatial resolution as a scale factor, description of the level of detail of each unit of observation (including administrative level of administrative areas), and/or or distance of a raster GRID size
-- `Spatial Reference System`: Specify the geographic or projected coordinate system for the study
+- `Spatial Reference System`: `WGS84:4326`
 - `Temporal Coverage`: Specify the temporal extent of your study---i.e. the range of time represented by the data observations.
 - `Temporal Resolution`: Specify the temporal resolution of your study---i.e. the duration of time for which each observation represents or the revisit period for repeated observations
 - `Lineage`: Describe and/or cite data sources and/or methodological steps used to create this data source
