--- a/procedure/code/01-R-markdown.Rmd
+++ b/procedure/code/01-R-markdown.Rmd
@@ -14,16 +14,11 @@ bibliography: "../../software.bib"
 
 # Abstract
 
-Write a brief abstract about your research project.
+This study is a *reproduction* of Charles W. Sterling III et al's study on "Connections Between Present-Day Water Access and Historical Redlining":
 
-If the project is a reproduction or replication study, include a declaration of the study type with a full reference to the original study.
-For example:
+> Sterling III, Charles W., et al. "Connections between present-day water access and historical redlining." Environmental Justice (2023). [doi.org/10.1089/env.2022.0115](https://doi.org/10.1089/env.2022.0115)
 
-This study is a *replication* of:
-
-> citation to prior study
-
-A graphical abstract of the study could also be included as an image here.
+This study uses ACS Census data and historical HOLC records of neighborhoods to examine the correlation of historical redlining and current-day access to water in cities. The study uses a binary logistic regression to identify relationships of different demographic and HOLC varaibles to access to water and sewage. The study finds that historically worse HOLC scores were correlated with less access to water in cities across all regions of the United States.
 
 # Study metadata
 
@@ -165,45 +160,11 @@ See acs_values.csv at `/data/raw/public/acs_values.csv`
 
 ## Prior observations  
 
-Prior experience with the study area, prior data collection, or prior observation of the data can compromise the validity of a study, e.g. through p-hacking.
-Therefore, disclose any prior experience or observations at the time of study pre-registration here, with example text below:
-
-At the time of this study pre-registration, the authors had a working prior knowledge of the geography of the study region with regards to the redlining phenomena to be studied.
-This study is related to no prior published studies by the authors
-
-For each primary data source, declare the extent to which authors had already engaged with the data:
-
-Census
-- [x] no data collection has started
-- [ ] pilot test data has been collected
-- [ ] data collection is in progress and data has not been observed
-- [ ] data collection is in progress and __% of data has been observed
-- [ ] data collection is complete and data has been observed. Explain how authors have already manipulated / explored the data.
-
-
-- [ ] no data collection has started
-- [ ] pilot test data has been collected
-- [x] data collection is in progress and data has not been observed
-- [ ] data collection is in progress and __% of data has been observed
-- [ ] data collection is complete and data has been observed. Explain how authors have already manipulated / explored the data.
+There are no prior observations related with this data.
 
 ## Bias and threats to validity
 
-Given the research design and primary data to be collected and/or secondary data to be used, discuss common threats to validity and the approach to mitigating those threats, with an emphasis on geographic threats to validity.
-
-These include:
-  - uneven primary data collection due to geographic inaccessibility or other constraints
-  - multiple hypothesis testing
-  - edge or boundary effects
-  - the modifiable areal unit problem
-  - nonstationarity
-  - spatial dependence or autocorrelation
-  - temporal dependence or autocorrelation
-  - spatial scale dependency
-  - spatial anisotropies
-  - confusion of spatial and a-spatial causation
-  - ecological fallacy
-  - uncertainty e.g. from spatial disaggregation, anonymization, differential privacy
+Two main source of bias in this study come from the HOLC data itself, while another comes from the ACS data. Firstly, the spatial extent of the HOLC data only covers the centers of major cities across the united states, limiting the analysis to center-cities. Secondly, Areal Interpolation was used to determine a HOLC grade for each block group, meaning that while a single grade can be determined, there may be some errors in block groups crossing over historic neighborhood boundaries. Additionally, it's unclear how this areal interpolation was done. Lastly, there could be a difference in results if an areal unit other than census block groups were used to perform this analysis.
 
 ## Data transformations
 
@@ -228,7 +189,29 @@ Also explain any follow-up analyses or validations.
 
 # Results
 
-Describe how results are to be presented.
+Data is presented as 3 figures, 2 tables, and 7 supplementary tables:
+
+Figures:
+
+- Map of HOLC grades for different cities across regions
+- Correlation plot for potential predictive variables
+- Map of percent of houses with incomplete plumbing  across regions
+
+Tables:
+
+- Average Marginal Effects of Variables determined by Binary Regression Model
+- The Number of Each Grade Polygon in Each Data Set
+
+Supplementary Tables:
+
+- The results of the Dunn Test to determine whether incomplete plumbing % in Grade A is significantly different than the other Grades
+- The average % for each predictive variable broken down by HOLC grade and region
+- AME Table for the Nation using the average 2.61168 as the threshold for the binary variable
+National
+- AME Table for the Northeast region using the average 1.447623 as the threshold for the binary variable
+- AME Table for the South region using the average 3.414391 as the threshold for the binary variable
+- AME Table for the Midwest region using the average 3.756471 as the threshold for the binary variable
+- AME Table for the West region using the average 0.7836609 as the threshold for the binary variable
 
 # Discussion
 
